Fixed problem with access type text not visible, fixed redirect issue with relative redirect, fixed redirect issue with implicit redirect